--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="nav-brand">
                 <h2>
                     <a href="#home" class="nav-brand-link">
-                        <img class="nav-logo" src="/assets/bgrm-removebg-preview.png" />
+                        <img class="nav-logo" src="./assets/bgrm-removebg-preview.png" />
                         <span class ="nav-brand-name">NavPriAm Agro Ventures Pvt. Ltd.</span>
                     </a>
                 </h2>
