--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     <meta name="twitter:title" content="Makhana Nation | Premium Fox Nuts by NavPriAm Agro Ventures">
     <meta name="twitter:description" content="Healthy, protein-rich fox nuts (makhana) from Bihar. Roasted, natural, and farm-fresh snacks crafted by NavPriAm Agro Ventures.">
     <meta name="twitter:image" content="https://www.makhananation.com/assets/m3-removebg-preview.png">
+
+    <!--Favicons-->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="manifest" href="assets/site.webmanifest">
     
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script type="text/javascript"
